[dependencies]
rand = "0.7"
polynomials = "0.2"

[dependencies.curve25519-dalek]
default-features = false
version = "3.0"
features = ["nightly", "serde", "alloc"]

[dependencies.blake2]
default-features = false
version = "0.9"

[dependencies.merlin]
default-features = false
ersion = "2"

[dependencies.serde]
default-features = false
version = "1.0"
features = ["derive"]
optional = true

[dev-dependencies]
criterion = "0.3"

[features]
default = ["std", "serde", "curve25519-dalek/u32_backend"]
std = []
simd_backend = ["curve25519-dalek/simd_backend", "blake2/simd_asm"]
u64_backend = ["curve25519-dalek/u64_backend"]
u32_backend = ["curve25519-dalek/u32_backend"]

[[bench]]
name = "prove_and_verify"
harness = false

[package]
name = "arcturus"
version = "0.1.1"
authors = ["cargodog <cargodog@protonmail.com>"]
edition = "2018"
description = "Implementation of Arcturus zero-knowledge proofs for confidential transactions."
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/cargodog/arcturus"
keywords = ["cryptography", "crypto", "zero-knowledge", "zk", "arcturus", "no-std"]
categories = ["cryptography", "no-std"]
exclude = ["**/.gitignore", ".gitignore"]
